samples/_failures_safe/1761659050_a32152_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fa16ab7.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_8fa16ab7.c:168:16: error: expected expression at end of input
  168 |         struct GraphEdge *edge =
      |                ^~~~~~~~~
./samples/SAFE/__tmp_8fa16ab7.c:168:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fa16ab7.c:168:16: error: expected declaration or statement at end of input
